crates/stepflow-main/tests/snapshots/test_run__run_tests@basic.yaml-2.snap
---
source: crates/stepflow-main/tests/test_run.rs
description: case 1
expression: result
info:
  name: hello
input_file: crates/stepflow-main/tests/flows/basic.yaml
---
outcome: success
result:
  name: world
  x: 2
  y: 8
