crates/stepflow-main/tests/snapshots/test_run__run_tests@basic.yaml-3.snap
---
source: crates/stepflow-main/tests/test_run.rs
description: case 2
expression: result
info:
  name: world
input_file: crates/stepflow-main/tests/flows/basic.yaml
---
outcome: failed
error:
  code: 500
  message: "Flow execution failed: error executing plugin"
