crates/stepflow-main/tests/snapshots/test_run__run_tests@basic.yaml.snap
---
source: crates/stepflow-main/tests/test_run.rs
description: case 0
expression: result
info:
  name: a
input_file: crates/stepflow-main/tests/flows/basic.yaml
---
outcome: success
result:
  name: b
  x: 1
  y: 2
