crates/stepflow-main/tests/snapshots/test_run__run_tests@blob_test.yaml-2.snap
---
source: crates/stepflow-main/tests/test_run.rs
description: case 1
expression: result
info:
  data:
    simple: test
    complex:
      deeply:
        nested:
          value: works
input_file: crates/stepflow-main/tests/flows/blob_test.yaml
---
outcome: success
result:
  blob_id: aa05cc227a02bd66a2a91fde7500be122d28e87c45832d1aa9cb0b432eef7e04
  retrieved_data:
    complex:
      deeply:
        nested:
          value: works
    simple: test
