crates/stepflow-main/tests/snapshots/test_run__run_tests@conditional_skip.yaml.snap
---
source: crates/stepflow-main/tests/test_run.rs
description: case 0
expression: result
info:
  should_skip: false
  value: a
input_file: crates/stepflow-main/tests/flows/conditional_skip.yaml
---
outcome: success
result:
  dependent_result: received b
