crates/stepflow-main/tests/snapshots/test_run__run_tests@conditional_skip_use_default.yaml-3.snap
---
source: crates/stepflow-main/tests/test_run.rs
description: case 2
expression: result
info:
  should_skip: false
  value: hello
input_file: crates/stepflow-main/tests/flows/conditional_skip_use_default.yaml
---
outcome: success
result:
  dependent_result: received world
