crates/stepflow-main/tests/snapshots/test_run__run_tests@custom_component_function.yaml-2.snap
---
source: crates/stepflow-main/tests/test_run.rs
description: case 1
expression: result
info:
  data:
    - name: Eve
      score: 100
    - name: Frank
      score: 88
input_file: crates/stepflow-main/tests/flows/custom_component_function.yaml
---
outcome: success
result:
  analytics:
    average: 94
    count: 2
    max: 100
    min: 88
    top_performer: Eve
